<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="heading">Playlist Maker</string>
    <string name="button_1">&#1055;&#1086;&#1080;&#1089;&#1082;</string>
    <string name="button_2">&#1052;&#1077;&#1076;&#1080;&#1072;&#1090;&#1077;&#1082;&#1072;</string>
    <string name="button_3">&#1053;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080;</string>
    <string name="tema">&#1058;&#1077;&#1084;&#1085;&#1072;&#1103; &#1090;&#1077;&#1084;&#1072;</string>
    <string name="Share_the_app">&#1055;&#1086;&#1076;&#1077;&#1083;&#1080;&#1090;&#1100;&#1089;&#1103; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1077;&#1084;</string>
    <string name="support">&#1053;&#1072;&#1087;&#1080;&#1089;&#1072;&#1090;&#1100; &#1074; &#1087;&#1086;&#1076;&#1076;&#1077;&#1088;&#1078;&#1082;&#1091;</string>
    <string name="Agreement">&#1055;&#1086;&#1083;&#1100;&#1079;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1100;&#1089;&#1082;&#1086;&#1077; &#1089;&#1086;&#1075;&#1083;&#1072;&#1096;&#1077;&#1085;&#1080;&#1077;</string>
    <string name="email">russia09853@gmail.com</string>
    <string name="subject">&#1057;&#1086;&#1086;&#1073;&#1097;&#1077;&#1085;&#1080;&#1077; &#1088;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1095;&#1080;&#1082;&#1072;&#1084; &#1080; &#1088;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1095;&#1080;&#1094;&#1072;&#1084; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1103; Playlist Maker</string>
    <string name="body">&#1057;&#1087;&#1072;&#1089;&#1080;&#1073;&#1086; &#1088;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1095;&#1080;&#1082;&#1072;&#1084; &#1080; &#1088;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1095;&#1080;&#1094;&#1072;&#1084; &#1079;&#1072; &#1082;&#1088;&#1091;&#1090;&#1086;&#1077; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1077;!</string>
    <string name="shareApp">&#1055;&#1086;&#1076;&#1077;&#1083;&#1080;&#1090;&#1100;&#1089;&#1103; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1077;&#1084;</string>
    <string name="shareText">&#1055;&#1086;&#1089;&#1084;&#1086;&#1090;&#1088;&#1080; &#1082;&#1091;&#1088;&#1089; &#1087;&#1086; Android-&#1088;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1082;&#1077; &#1074; &#1055;&#1088;&#1072;&#1082;&#1090;&#1080;&#1082;&#1091;&#1084;&#1077;! https://practicum.yandex.ru/android-developer/</string>
    <string name="agreementUrl">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search">&#1055;&#1086;&#1080;&#1089;&#1082;</string>
    <string name="search_poisk">&#1055;&#1086;&#1080;&#1089;&#1082;</string>
    <string name="mediateka">&#1052;&#1077;&#1076;&#1080;&#1072;&#1090;&#1077;&#1082;&#1072;</string>
    <string name="track_cover">&#1054;&#1073;&#1083;&#1086;&#1078;&#1082;&#1072; &#1090;&#1088;&#1077;&#1082;&#1072;</string>
    <string name="track_subtitle_format">%1$s &#8226; %2$s</string>
    <string name="nothing_found">&#1053;&#1080;&#1095;&#1077;&#1075;&#1086; &#1085;&#1077; &#1085;&#1072;&#1096;&#1083;&#1086;&#1089;&#1100;</string>
    <string name="connection_error">&#1055;&#1088;&#1086;&#1073;&#1083;&#1077;&#1084;&#1099; &#1089;&#1086; &#1089;&#1074;&#1103;&#1079;&#1100;&#1102;</string>
    <string name="connection_error_message">&#1047;&#1072;&#1075;&#1088;&#1091;&#1079;&#1082;&#1072; &#1085;&#1077; &#1091;&#1076;&#1072;&#1083;&#1072;&#1089;&#1100;. &#1055;&#1088;&#1086;&#1074;&#1077;&#1088;&#1100;&#1090;&#1077; &#1087;&#1086;&#1076;&#1082;&#1083;&#1102;&#1095;&#1077;&#1085;&#1080;&#1077; &#1082; &#1080;&#1085;&#1090;&#1077;&#1088;&#1085;&#1077;&#1090;&#1091;</string>
    <string name="refresh">&#1054;&#1073;&#1085;&#1086;&#1074;&#1080;&#1090;&#1100;</string>
    <string name="history_title">&#1042;&#1099; &#1080;&#1089;&#1082;&#1072;&#1083;&#1080;</string>
    <string name="clear_history">&#1054;&#1095;&#1080;&#1089;&#1090;&#1080;&#1090;&#1100; &#1080;&#1089;&#1090;&#1086;&#1088;&#1080;&#1102;</string>
    <string name="duration">&#1044;&#1083;&#1080;&#1090;&#1077;&#1083;&#1100;&#1085;&#1086;&#1089;&#1090;&#1100;</string>
    <string name="album">&#1040;&#1083;&#1100;&#1073;&#1086;&#1084;</string>
    <string name="year">&#1043;&#1086;&#1076;</string>
    <string name="genre">&#1046;&#1072;&#1085;&#1088;</string>
    <string name="country">&#1057;&#1090;&#1088;&#1072;&#1085;&#1072;</string>
    <string name="play">&#1042;&#1086;&#1089;&#1087;&#1088;&#1086;&#1080;&#1079;&#1074;&#1077;&#1089;&#1090;&#1080;</string>
    <string name="playback_notification_channel_name">&#1042;&#1086;&#1089;&#1087;&#1088;&#1086;&#1080;&#1079;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</string>
    <string name="playback_notification_text">%1$s - %2$s</string>
    <string name="add_to_playlist">&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1074; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;</string>
    <string name="add_to_favorites">&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1074; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1085;&#1086;&#1077;</string>
    <string name="player_start_time">00:00</string>
    <string name="new_playlist">&#1053;&#1086;&#1074;&#1099;&#1081; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;</string>
    <string name="playlist_name_required">&#1053;&#1072;&#1079;&#1074;&#1072;&#1085;&#1080;&#1077;*</string>
    <string name="playlist_description">&#1054;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1077;</string>
    <string name="create">&#1057;&#1086;&#1079;&#1076;&#1072;&#1090;&#1100;</string>
    <string name="playlist_created_message">&#1055;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090; %1$s &#1089;&#1086;&#1079;&#1076;&#1072;&#1085;</string>
    <string name="favorite_tracks_tab">&#1048;&#1079;&#1073;&#1088;&#1072;&#1085;&#1085;&#1099;&#1077; &#1090;&#1088;&#1077;&#1082;&#1080;</string>
    <string name="playlists_tab">&#1055;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;&#1099;</string>
    <string name="empty_favorite_tracks">&#1042;&#1072;&#1096;&#1072; &#1084;&#1077;&#1076;&#1080;&#1072;&#1090;&#1077;&#1082;&#1072; &#1087;&#1091;&#1089;&#1090;&#1072;</string>
    <string name="empty_playlists">&#1042;&#1099; &#1085;&#1077; &#1089;&#1086;&#1079;&#1076;&#1072;&#1083;&#1080; &#1085;&#1080; &#1086;&#1076;&#1085;&#1086;&#1075;&#1086; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;&#1072;</string>
    <string name="playlist_cover">&#1054;&#1073;&#1083;&#1086;&#1078;&#1082;&#1072; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;&#1072;</string>
    <string name="finish_playlist_creation_title">&#1047;&#1072;&#1074;&#1077;&#1088;&#1096;&#1080;&#1090;&#1100; &#1089;&#1086;&#1079;&#1076;&#1072;&#1085;&#1080;&#1077; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;&#1072;?</string>
    <string name="finish_playlist_creation_message">&#1042;&#1089;&#1077; &#1085;&#1077;&#1089;&#1086;&#1093;&#1088;&#1072;&#1085;&#1077;&#1085;&#1085;&#1099;&#1077; &#1076;&#1072;&#1085;&#1085;&#1099;&#1077; &#1073;&#1091;&#1076;&#1091;&#1090; &#1087;&#1086;&#1090;&#1077;&#1088;&#1103;&#1085;&#1099;</string>
    <string name="cancel_dialog">&#1054;&#1090;&#1084;&#1077;&#1085;&#1072;</string>
    <string name="finish_dialog">&#1047;&#1072;&#1074;&#1077;&#1088;&#1096;&#1080;&#1090;&#1100;</string>
    <string name="playlists_bottom_sheet_title">&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1074; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;</string>
    <string name="track_added_to_playlist_message">&#1044;&#1086;&#1073;&#1072;&#1074;&#1083;&#1077;&#1085;&#1086; &#1074; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090; %1$s</string>
    <string name="track_already_added_to_playlist_message">&#1058;&#1088;&#1077;&#1082; &#1091;&#1078;&#1077; &#1076;&#1086;&#1073;&#1072;&#1074;&#1083;&#1077;&#1085; &#1074; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090; %1$s</string>
    <string name="playlist_tracks_count_format">%1$d %2$s</string>
    <string name="track_word_single">&#1090;&#1088;&#1077;&#1082;</string>
    <string name="track_word_few">&#1090;&#1088;&#1077;&#1082;&#1072;</string>
    <string name="track_word_many">&#1090;&#1088;&#1077;&#1082;&#1086;&#1074;</string>
    <string name="edit_playlist_title">&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1086;&#1074;&#1072;&#1090;&#1100;</string>
    <string name="save_playlist_button">&#1057;&#1086;&#1093;&#1088;&#1072;&#1085;&#1080;&#1090;&#1100;</string>
    <string name="playlist_menu">&#1052;&#1077;&#1085;&#1102; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;&#1072;</string>
    <string name="share">&#1055;&#1086;&#1076;&#1077;&#1083;&#1080;&#1090;&#1100;&#1089;&#1103;</string>
    <string name="playlist_empty_tracks">&#1042; &#1101;&#1090;&#1086;&#1084; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;&#1077; &#1085;&#1077;&#1090; &#1090;&#1088;&#1077;&#1082;&#1086;&#1074;</string>
    <string name="playlist_details_stats_format">%1$s &#8226; %2$s</string>
    <string name="edit_playlist_info">&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1086;&#1074;&#1072;&#1090;&#1100; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1102;</string>
    <string name="delete_playlist">&#1059;&#1076;&#1072;&#1083;&#1080;&#1090;&#1100; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;</string>
    <string name="playlist_share_empty">&#1042; &#1101;&#1090;&#1086;&#1084; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;&#1077; &#1085;&#1077;&#1090; &#1089;&#1087;&#1080;&#1089;&#1082;&#1072; &#1090;&#1088;&#1077;&#1082;&#1086;&#1074;, &#1082;&#1086;&#1090;&#1086;&#1088;&#1099;&#1084; &#1084;&#1086;&#1078;&#1085;&#1086; &#1087;&#1086;&#1076;&#1077;&#1083;&#1080;&#1090;&#1100;&#1089;&#1103;</string>
    <string name="delete_playlist_title">&#1059;&#1076;&#1072;&#1083;&#1080;&#1090;&#1100; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;</string>
    <string name="delete_playlist_message">&#1061;&#1086;&#1090;&#1080;&#1090;&#1077; &#1091;&#1076;&#1072;&#1083;&#1080;&#1090;&#1100; &#1087;&#1083;&#1077;&#1081;&#1083;&#1080;&#1089;&#1090;?</string>
    <string name="delete_track_message">&#1061;&#1086;&#1090;&#1080;&#1090;&#1077; &#1091;&#1076;&#1072;&#1083;&#1080;&#1090;&#1100; &#1090;&#1088;&#1077;&#1082;?</string>
    <string name="dialog_no">&#1053;&#1045;&#1058;</string>
    <string name="dialog_yes">&#1044;&#1040;</string>
    <string name="dialog_delete">&#1059;&#1076;&#1072;&#1083;&#1080;&#1090;&#1100;</string>
    <string name="back">&#1053;&#1072;&#1079;&#1072;&#1076;</string>
</resources>
