<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    style="@style/main"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        style="@style/NameMain"
        android:text="@string/heading">

    </TextView>


    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        <Button
            style="@style/ButtonMain"
            android:id="@+id/poisk"
            android:text="@string/button_1"
            app:icon="@drawable/lupa"/>

        <Button
            style="@style/ButtonMain"
            android:id="@+id/mediateka"
            android:text="@string/button_2"
            app:icon="@drawable/mediateka"/>

        <Button
            style="@style/ButtonMain"
            android:id="@+id/nastroiki"
            android:text="@string/button_3"
            app:icon="@drawable/nastroiki"/>

    </LinearLayout>

</LinearLayout>


