<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_nav_graph"
    app:startDestination="@id/mediatekaFragment">

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.playlistmaker.presentation.search.SearchFragment"
        android:label="@string/search">

        <action
            android:id="@+id/action_searchFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>

    <fragment
        android:id="@+id/mediatekaFragment"
        android:name="com.example.playlistmaker.presentation.media.MediatekaFragment"
        android:label="@string/mediateka">

        <action
            android:id="@+id/action_mediatekaFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playlistmaker.presentation.settings.SettingsFragment"
        android:label="@string/button_3" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.example.playlistmaker.presentation.player.PlayerFragment"
        android:label="@string/play">

        <argument
            android:name="track"
            app:argType="com.example.playlistmaker.domain.model.Track" />
    </fragment>

</navigation>
