<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    style="@style/settings">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_3"
        android:textColor="@color/track_name_color"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/ButtonSettings1"
            android:layout_marginTop="32dp"
            android:text="@string/tema" />

        <Switch
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="6dp"
            android:paddingLeft="9dp"
            android:paddingEnd="9dp"
            android:paddingVertical="11dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_settings_1"
            style="@style/TextViewSettings"
            android:layout_marginTop="12dp"
            android:text="@string/Share_the_app" />

        <ImageButton
            android:id="@+id/button_settings_2"
            style="@style/ImageButtonSettings"
            android:layout_marginTop="31dp"
            android:src="@drawable/share" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/support_1"
            style="@style/TextViewSettings"
            android:text="@string/support" />

        <ImageButton
            android:id="@+id/support_2"
            style="@style/ImageButtonSettings"
            android:src="@drawable/support" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/agreement_text"
            style="@style/TextViewSettings"
            android:text="@string/Agreement" />

        <ImageButton
            android:id="@+id/agreement_icon"
            style="@style/ImageButtonSettings"
            android:src="@drawable/strelka_2" />

    </LinearLayout>

</LinearLayout>
