<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:paddingBottom="24dp"
    tools:context=".presentation.playlist.NewPlaylistFragment">

    <ImageButton
        android:id="@+id/backButton"
        style="@style/ImageButtonSetting"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/strelka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/new_playlist"
        android:textColor="@color/track_name_color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="@id/backButton" />

    <FrameLayout
        android:id="@+id/imageContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/playlist_image_placeholder_bg"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton">

        <ImageView
            android:id="@+id/coverImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/playlist_cover"
            android:scaleType="centerCrop"
            android:visibility="gone"
            tools:src="@drawable/placeholder" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistNameInputLayout"
        style="@style/PlaylistTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/playlist_name_required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistNameEditText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:textColor="@color/track_name_color"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistDescriptionInputLayout"
        style="@style/PlaylistTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/playlist_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistNameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="2"
            android:textColor="@color/track_name_color"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/create_playlist_button_bg"
        android:backgroundTint="@null"
        android:enabled="false"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/create_playlist_button_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
